Security fixes: auth bypass, @PreAuthorize, @Valid, GlobalExceptionHandler, env variables, Register page, Playwright E2E tests